mobile z-index fixed?

--- a/ProductivityTracker/src/sass/pages/activities-edit.scss
+++ b/ProductivityTracker/src/sass/pages/activities-edit.scss
@@ -193,7 +193,7 @@
               transition: all 0.3s;
               background-color: #D9D9D9;
               padding: 3px;
-              z-index: 3;
+              z-index: 2;
               box-sizing: border-box;
             }
 
@@ -347,7 +347,7 @@
         display: grid;
         grid-template-rows: repeat(5, 1fr);
         overflow-y: hidden;
-        z-index: 3;
+        z-index: 2;
         font-family: 'Josefin Sans', sans-serif;
   
         #edit-current-title {
@@ -387,7 +387,7 @@
               transition: all 0.3s;
               background-color: #D9D9D9;
               padding: 3px;
-              z-index: 3;
+              z-index: 2;
               box-sizing: border-box;
             }
 
